name:               unbreak
version:            0.4.0
synopsis:           Secure and resilient remote file storage utility
description:
    unbreak is a secure remote file storage utility written in Haskell.
    .
    Other than a working SSH server and an empty directory, it requires no
    configuration on the server-side to set up the file storage. Leveraging
    existing commands, it simplifies the process of fetching and saving files
    with a client-side encryption. It aims to make the work flow natural, as
    if the user is using an unencrypted local file, while keeping the
    local-remote interaction as rare as possible to be usable even with a
    highly unstable Internet connection.
    .
    unbreak uses modern crypto primitives such as scrypt and ChaCha20-Poly1305
    to protect user security and privacy. Some of its usage is documented in
    the 'Unbreak.Crypto' module. The API is internal and you should not
    directly depend on them from your code, but browsing the source code from
    the API docs and copying them to adapt to another free software is
    highly encouraged.
    .
    For a detailed information on how to actually use this utility, please
    refer to its official web page at <https://e.xtendo.org/scs/unbreak>.
license:            AGPL-3
license-file:       LICENSE
author:             XT
maintainer:         e@xtendo.org
copyright:          Copyright (C) 2015-2017 XT
category:           Network
build-type:         Simple
cabal-version:      >=1.18
homepage:           https://e.xtendo.org/scs/unbreak
bug-reports:        https://github.com/xtendo-org/unbreak/issues
tested-with:        GHC==7.10.2
extra-source-files: README.md CHANGELOG.md

library
    hs-source-dirs:     lib
    exposed-modules:
        Unbreak.Crypto,
        Unbreak.Format,
        Unbreak.Run,
        Data.ByteString.OverheadFree
    other-modules:
        Unbreak.Pack
    default-extensions: OverloadedStrings, RecordWildCards
    default-language:   Haskell2010
    build-depends:
        aeson,
        aeson-pretty,
        base64-bytestring,
        bytestring,
        cereal,
        cryptonite,
        memory,
        text,
        unix,
        base
    ghc-options: -Wall -fwarn-incomplete-uni-patterns

executable unbreak
    default-extensions: OverloadedStrings, RecordWildCards
    main-is:            Main.hs
    hs-source-dirs:     src
    build-depends:
        bytestring >= 0.10,
        cmdargs >= 0.10,
        unbreak,
        base >=4.8 && <5
    ghc-options: -Wall -fwarn-incomplete-uni-patterns -O2 -threaded -static
    default-language: Haskell2010
